fix: scrollbar properties

--- a/full-stack-javascript/fsj-06-nodejs/27-inventory-application/public/styles/styles.css
+++ b/full-stack-javascript/fsj-06-nodejs/27-inventory-application/public/styles/styles.css
@@ -3,6 +3,21 @@
   src: url('/fonts/AtkinsonHyperlegibleNext-Regular.ttf');
 }
 
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 10px 10px var(--bg-alt);
+  border: solid 8px transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 10px 10px var(--accent);
+  border: solid 8px transparent;
+  border-radius: 20px;
+}
+
 :root {
   --bg: #121212;
   --bg-alt: #1e1e1e;
@@ -101,13 +116,13 @@ main {
 .games {
   padding: 1.5rem;
   width: 100%;
-  height: calc(100vh - 350px);
+  height: calc(100vh - 400px);
   position: relative;
 
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   background: var(--bg-alt);
   border-radius: 20px;
